# not-another-coderabbit-clone

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt
github-actions-templates/: PULL_REQUEST_TEMPLATE.md  pr-ai-reviewer.yml  pr-lint-check.yml  registry-update.yml
registry/: index.json  lob_index.json
registry/features/: Digivyapar_coupons.json  about.json  achievement_dashboard.json  app_home.json  app_update.json  application.json  auth.json  auto_sync.json  banner.json  banner_v2.json  barcode.json  biometric_auth.json  buckets.json  cart.json  catalogue.json  ck_banded_pricing.json  ck_bank_enrollment.json  ck_bank_help_desk.json  ck_consumer_promo.json  ck_contest_dashboard.json  ck_customer_services.json  ck_form.json  ck_image_capture.json  ck_incentive_dashboard.json  ck_locate_me.json  ck_loyalty_dashboard.json  ck_minutes_of_meeting.json  ck_order_cancellation_reason.json  ck_order_cancellation_summary.json  ck_payment_dashboard.json  ck_payment_methods.json  ck_pjp_dashboard.json  ck_promo_history.json  ck_purchase_summary.json  ck_qps_dashboard.json  (+143 more)
reviewer/: __init__.py  ai_reviewer.py  api.py  config.py  database.py  figma_client.py  git_analyzer.py  github_client.py  jira_client.py  kb_query.py  lob_mapper.py  main.py  prompt_builder.py  registry.py
scripts/: bootstrap_registry.py  update_registry.py
services/: diff_parser.py  github.py  jira.py  reviewer.py
tests/: test_git_analyzer.py  test_kb_query.py  test_lob_mapper.py  test_prompt_builder.py  test_registry.py
(+8 files in other folders)
